unpackaged/main/default/objects/Flow_Settings__c/fields/Accounts_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Accounts_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Accounts Enabled</label>
    <type>Checkbox</type>
</CustomField>