unpackaged/main/default/objects/Flow_Settings__c/fields/Contacts_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Contacts_Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Contacts Enabled</label>
    <type>Checkbox</type>
</CustomField>