unpackaged/main/default/objects/Flow_Settings__c/fields/Partner_Network_Connection_Id__c.field-meta.xml
<CustomField>
    <fullName>Partner_Network_Connection_Id__c</fullName>
    <label>Partner Network Connection Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>